added formatted price to profile page.

--- a/views/profile.html
+++ b/views/profile.html
@@ -8,7 +8,7 @@
         <div>
             
             <h4>{{name}}</h4>
-            <div>{{price}}</div>
+            <div>{{price.formatted}}</div>
             <div>{{{details}}}</div>
         </div>
     {{/data.tickets}}
